data/Java/16-illegal-constructor-name/4/[M]Error.txt
*https://www.geeksforgeeks.org/constructors-in-java/
Program.java:14: error: invalid method declaration; return type required
    Geekk(String name, int id)
    ^